<resources>
    <string name="app_name">鹰速司机版</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bank_card">BankCardActivity</string>

    <!--dialog相关-->
    <string name="m_default_progressbar">Default Progressbar:</string>

    <string name="m_dialog_default_title">Here\'s a message!</string>
    <string name="agree">我同意&#160;</string>
    <string name="fwxy">服务协议</string>
    <string name="and">&#160;与&#160;</string>
    <string name="yszc">隐私政策</string>
    <string name="m_dialog_ok">确定</string>
    <string name="m_dialog_cancel">取消</string>
    <string name="m_LOADING">Loading...</string>
    <string name="rating">评级：</string>
    <string name="rat">评价</string>
    <string name="biaoqian">标签：</string>
    <string name="comments">请输入评价，不超过200字：</string>
    <string name="submit">提交</string>
    <string name="niming">匿名评价</string>
    <string name="kepin">可拼</string>
    <string name="search">搜索</string>
    <string name="reset">重置</string>
    <string name="ftype">类型：</string>
    <string name="pin">拼车</string>
    <string name="zheng">整车</string>
    <string name="kweight">可装重量:</string>
    <string name="weiwarn">请输入可装重量</string>
    <string name="kvolume">可装体积:</string>
    <string name="volwarn">请输入可装体积</string>
    <string name="ton">吨</string>
    <string name="cubic">m³</string>
    <string name="version">©HawkDriver1.0.0</string>
    <string name="aboutus">关于我们</string>
</resources>
