<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_ef"
              android:clickable="true"
              android:orientation="vertical">

    <include layout="@layout/title_view_img"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="选择出发地(最多3个)"
        android:textColor="@color/word_black"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recy_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linear_cf00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:src="@drawable/icon_add"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="选择"
                android:textColor="@color/blue_87"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_ef"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="选择目的地(最多3个)"
        android:textColor="@color/word_black"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recy_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linear_md00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:src="@drawable/icon_add"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="选择"
                android:textColor="@color/blue_87"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_ef"/>

    <RelativeLayout
        android:id="@+id/rlt_car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:minHeight="45dp">

        <ImageView
            android:id="@+id/img_car"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_huoche"/>

        <TextView
            android:id="@+id/tv_choice_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_car"
            android:hint="需要的车长车型"
            android:textColor="@color/word_black"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/me_next2"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_ef"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:minHeight="45dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ftype"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/cb_pc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"/>
        <CheckBox
            android:id="@+id/cb_zc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zheng"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="45dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/kweight"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/et_kweight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/weiwarn"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:numeric="decimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ton"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="45dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/kvolume"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/et_kvolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/volwarn"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:numeric="decimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cubic"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_round_blue"
        android:gravity="center"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>